# langchain-academy

./: .gitignore  pyproject.toml
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  router.ipynb  simple-graph.ipynb
module-1/studio/: agent.py
module-2/: chatbot-external-memory.ipynb
module-3/: breakpoints.ipynb  streaming-interruption.ipynb
module-3/studio/: agent.py
module-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb
module-5/: memory_agent.ipynb  memory_store.ipynb  memoryschema_profile.ipynb
module-6/: connecting.ipynb
module-6/deployment/: langgraph.json  requirements.txt  task_maistro.py
