[project]
name = "langchain-academy"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.4",
    "cryptography>=46.0.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.1.14",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.30",
    "langgraph-prebuilt>=1.1.0",
    "langgraph-sdk>=0.4.2",
    "langsmith>=0.7.31",
    "notebook>=7.6.0",
    "pygments>=2.20.0",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
